@@ -3,6 +3,7 @@ package app.api;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.HashMap;
@@ -17,72 +18,52 @@ import org.apache.http.util.EntityUtils;
 
 public class TextToSpeech {
     private static final String API_KEY = "68001ae522624aed9acf52141cbb75ed";
-    private static final String VOICERSS_URL = "http://api.voicerss.org/";
-    private static HashMap<String, String> voices = new HashMap<>();
-    private static String format = "44khz_16bit_stereo"; 
-    private static String codec = "MP3";
-    private static Player currentPlayer; 
-    private static final Object playerLock = new Object(); 
+    private static final String VOICELESS_URL = "http://api.voicerss.org/";
+    private static final HashMap<String, String> VOICES = new HashMap<>();
+    private static final String FORMAT = "44khz_16bit_stereo";
+    private static final String CODEC = "MP3";
+    private static final Object PLAYER_LOCK = new Object();
+    private static Player currentPlayer;
 
-    public static synchronized void speakText(String text, String language) {
+    public static synchronized void speakText(String text, String language) throws IOException {
         if (text == null) {
             return;
         }
-        synchronized (playerLock) {
+        synchronized (PLAYER_LOCK) {
             if (currentPlayer != null) {
                 currentPlayer.close();
             }
         }
 
         byte[] audio;
-        String voice = voices.get(language);
+        String voice = VOICES.get(language);
         String encodedText;
-        try {
-            encodedText = URLEncoder.encode(text, "UTF-8");
-        } 
-        catch (IOException e) {
-            e.printStackTrace();
-            return;
-        }
-        String urlStr = String.format("%s?key=%s&hl=%s&v=%s&c=%s&f=%s&src=%s", VOICERSS_URL, API_KEY, language, voice, codec, format, encodedText);
+        encodedText = URLEncoder.encode(text, StandardCharsets.UTF_8);
+        String urlStr = String.format("%s?key=%s&hl=%s&v=%s&c=%s&f=%s&src=%s", VOICELESS_URL, API_KEY, language, voice, CODEC, FORMAT, encodedText);
         CloseableHttpClient httpClient = HttpClients.createDefault();
-        try {
-            HttpGet request = new HttpGet(urlStr);
-            HttpResponse response = httpClient.execute(request);
-            audio = EntityUtils.toByteArray(response.getEntity());
-            new Thread(() -> {
-                try {
-                    playAudio(audio);
-                } 
-                catch (IOException | JavaLayerException e) {
-                    e.printStackTrace();
-                }
-            }).start();
-        } 
-        catch (IOException e) {
-            e.printStackTrace();
-        } 
-        finally {
+        HttpGet request = new HttpGet(urlStr);
+        HttpResponse response = httpClient.execute(request);
+        audio = EntityUtils.toByteArray(response.getEntity());
+        new Thread(() -> {
             try {
-                httpClient.close();
-            } 
-            catch (IOException e) {
-                e.printStackTrace();
+                playAudio(audio);
+            } catch (IOException | JavaLayerException e) {
+                throw new RuntimeException(e);
             }
-        }
+        }).start();
     }
 
     public static void addVoice() {
-        voices.put("en-us", "Linda");
-        voices.put("en-gb", "Harry");
-        voices.put("vi-vn", "Chi");
+        VOICES.put("en-us", "Linda");
+        VOICES.put("en-gb", "Harry");
+        VOICES.put("vi-vn", "Chi");
     }
 
     private static void playAudio(byte[] audio) throws IOException, JavaLayerException {
-        Path tempFile = Files.createTempFile("audio", "." + codec.toLowerCase());
+        Path tempFile = Files.createTempFile("audio", "." + CODEC.toLowerCase());
         Files.write(tempFile, audio);
         try (FileInputStream fis = new FileInputStream(tempFile.toFile())) {
-            synchronized (playerLock) {
+            synchronized (PLAYER_LOCK) {
                 currentPlayer = new Player(fis);
             }
             currentPlayer.play();
@@ -93,7 +74,7 @@ public class TextToSpeech {
     }
 
     public static void stopSpeaking() {
-        synchronized (playerLock) {
+        synchronized (PLAYER_LOCK) {
             if (currentPlayer != null) {
                 currentPlayer.close();
                 currentPlayer = null;
@@ -104,6 +85,10 @@ public class TextToSpeech {
     public static void main(String[] args) {
         //Test
         addVoice();
-        speakText("Xin chào", "vi-vn");
+        try {
+            speakText("Xin chào", "vi-vn");
+        } catch (IOException e) {
+            System.out.println("No internet connection");
+        }
     }
 }
